fix: addresses #404 - updates type styling on mobile

--- a/assets/styles/block/_hero.scss
+++ b/assets/styles/block/_hero.scss
@@ -32,6 +32,7 @@
 .subtitle-1,
 .subtitle-2 {
     font-weight: 700;
+    font-size: 14px;
 }
 
 .subtitle-2 {
